fix(about-us): fix spacings

--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -1645,6 +1645,7 @@
 @media screen and (max-width: 767px) {
   .flexRowContent--call-center-content {
     padding: 0 8px;
+    margin: 0;
   }
 }
 
